[workspace]
members = ["cookbooks/kanso-lease","kanso-client"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bytes = "1.9"
thiserror = "2.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
kanso-client = { path = "kanso-client" }
