[workspace]
members = ["backends/kanso-gcs", "backends/kanso-inmemory", "backends/test-suite", "cookbooks/kanso-lease", "kanso-client"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bytes = "1.9"
thiserror = "2.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["sync", "rt", "macros", "time", "process", "fs", "io-util"] }
kanso-client = { path = "kanso-client" }
kanso-gcs = { path = "backends/kanso-gcs" }
kanso-inmemory = { path = "backends/kanso-inmemory" }
kanso-backends-test-suite = { path = "backends/test-suite" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
gcp_auth = "0.12"
urlencoding = "2"
flate2 = "1.0"
tar = "0.4"
tempfile = "3"
